# StereoCameraCalibration-chessBoard-

./: CMakeLists.txt  README.md  main.cpp
data/: extrinsic_file.yml  intrinsic_file.yml
outputs/: disp.txt
srcs/: Calibrator.h  ChessBoard.h  CoreBM.h  config.h  utils.h
